# Kad_parcer

./: .env.example  .gitignore  ARCHITECTURE.md  Current.md  INTEGRATION_GUIDE.md  PIPELINE_README.md  PR_SUMMARY.md  README.md  TESTING.md  alembic.ini  pyproject.toml
docker/: Dockerfile  celery-beat.Dockerfile  docker-compose.yml
docs/: IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  KAD_RESEARCH_GUIDE.md  METADATA_SCHEMA.md  PARSING_GUIDE.md  PROGRESS_SUMMARY.md  kad_api_analysis.md  moscow_district_courts.md
plugins/: README.md  example_exporter.py  example_processor.py
scripts/: analyze_case_page_structure.py  analyze_electronic_case_tab.py  analyze_expandable_sections.py  analyze_results.py  benchmark_converter.py  create_test_pdf.py  debug_case_page.py  debug_court_selector.py  debug_expand_buttons.py  debug_parser.py  debug_search_result.py  debug_table_row.py  deep_html_analysis.py  download_all_cases_from_january.py  download_all_electronic_case_docs.py  download_case_documents.py  import_json_to_db.py  inspect_form.py  integrate_pipeline.py  parse_all_january_2024.py  parse_case_with_instances.py  parse_full_january_2024.py  parse_january_by_day_and_court.py  parse_moscow_5years.py  parse_november_2025.py  parse_with_cdp.py  parse_with_pdf_to_md.py  process_cases.py  start_chrome_debug.sh  start_chrome_debug_linux.sh  test_ajax_pagination.py  test_api_with_cookies.py  test_full_workflow.py  test_kad_api.py  test_next_page.py  test_pagination.py  test_parser_pagination.py  test_playwright.py  test_playwright_api.py  test_real_chrome.py
src/api/: app.py  auth.py  dependencies.py
src/cli/: commands.py
src/converter/: __init__.py  pdf_to_md.py
src/core/: config.py  exceptions.py  logging.py
src/database/: __init__.py  schema.sql  sqlite_manager.py
src/downloader/: __init__.py  document_downloader.py
src/parser/: docx_parser.py  html_parser.py  pdf_parser.py
src/plugins/: __init__.py  base.py  manager.py
src/scraper/: court_names.py  kad_client.py  parallel_parser.py  playwright_scraper.py  rate_limiter.py
src/tasks/: beat_schedule.py  (+4 more)
tests/: test_auth.py  test_converter.py  test_database.py  test_downloader.py
(+31 files in other folders)
